--- a/homepage.html
+++ b/homepage.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="./static/homepage.js"></script>
     <title>Homepage</title>
 </head>
 <body>
-    Logged In :)
+    <h2>Logged In</h2>
+    <button id="logout">Log Out</button>
 </body>
 </html>
