--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/styles.css" type="text/css">
-    <script src="./static/main.js" defer></script>
+    <script type="module" src="./static/main.js" defer></script>
     <title>Login Page</title>
 </head>
 
@@ -30,7 +30,8 @@
                 <small class="error_password" id="error">Error</small>
             </div>
 
-            <button type="submit">Login</button>
+            <button type="submit" id="login">Login</button>
+            <button type="button" id="register">Register</button>
         </form>
     </main>
 </body>
