changed error showing logic on registration page

--- a/register.html
+++ b/register.html
@@ -20,22 +20,22 @@
         <div class="form_fields">
           <label for="fullname">Full name</label><br />
           <input type="text" name="fullname" id="fullname" />
-          <small class="error">error</small>
+          <small class="error errorFullname">error</small>
         </div>
         <div class="form_fields">
           <label for="email">Email address</label><br />
           <input type="text" name="email" id="email" />
-          <small class="error">error</small>
+          <small class="error errorEmail">error</small>
         </div>
         <div class="form_fields">
           <label for="username">Username</label><br />
           <input type="text" name="username" id="username" />
-          <small class="error">error</small>
+          <small class="error errorUsername">error</small>
         </div>
         <div class="form_fields">
           <label for="password">Password</label><br />
           <input type="password" name="password " id="password" />
-          <small class="error">error</small>
+          <small class="error errorPassword">error</small>
         </div>
         <div class="form_fields">
           <label for="password_confirm">Confirm Password</label><br />
@@ -44,7 +44,7 @@
             name="password_confirm"
             id="password_confirm"
           />
-          <small class="error">error</small>
+          <small class="error errorCPassword">error</small>
         </div>
         <button type="submit">Sign Up</button>
         <p>Already have and account? <a href="./index.html">Sign In</a>.</p>
